CSS improvements: don't show uploaded file mediatype by default. Fix spacing in tree.

--- a/src/resources-packaged/config/theme/xforms.css
+++ b/src/resources-packaged/config/theme/xforms.css
@@ -267,7 +267,7 @@ fieldset.xforms-select-appearance-full { margin: 0; border: none } /* when field
 .xforms-upload-state-progress .xforms-upload-info { display: none; }
 .xforms-upload-state-file .xforms-upload-select { display: none; }
 .xforms-upload-state-file .xforms-upload-progress { display: none; }
-.xforms-upload-mediatype { padding-left: .5em; font-style: italic; }
+.xforms-upload-mediatype { display: none }
 .xforms-upload-size { padding-left: .5em; }
 .xforms-upload-remove { vertical-align: -20%; padding-left: .5em; cursor: pointer; }
 .xforms-upload-progress .yui-pb, .xforms-upload-progress .xforms-upload-cancel { vertical-align: middle }
@@ -410,6 +410,9 @@ a.xforms-readonly, .xforms-trigger-readonly a { color: gray; cursor: default }
 /* Fix for Firefox issue when clicking on the first "-" in span mode
    http://forge.ow2.org/tracker/index.php?func=detail&aid=314833&group_id=168&atid=350207 */
 .xforms-select1-appearance-xxforms-tree, .xforms-select-appearance-xxforms-tree { display: block }
+
+/* Make sure there is no margin at bottom of table used within tree */
+.xforms-select1-appearance-xxforms-tree table, .xforms-select-appearance-xxforms-tree table { margin-bottom: 0 }
 
 /* Yellow highlight for selected item */
 .xforms-form .ygtvcontent .xforms-tree-label-selected,
